--- a/src/main/webapp/touristsPage.html
+++ b/src/main/webapp/touristsPage.html
@@ -13,6 +13,8 @@
 <div class="navbar">
     <div class="navbar-inner">
         <a class="brand" href="#">Space Flight Manager - Tourists</a>
+        <a class="btn" href="/">Main Page</a>
+        <a class="btn" href="flightsPage.html">Flights Page</a>
     </div>
 </div>
 
